--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,12 @@
+#box-h{
+background: #000000;
+border: 10px soild red;
+padding: 20px;
+}
+
 #header1{
-  background: #000000;
-  color: white;
+  color: yellow;
   text-align: center;
-  padding: 0;
+  margin-top: 10;
+  margin-bottom: 10;
 }
