--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,10 @@
 #box-h{
-background: #000000;
-border: 10px soild red;
+background-color: #000000;
+border: 3px soild red;
 padding: 20px;
+width: 50px;
+height: 50px;
+
 }
 
 #header1{
