--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,10 @@
+#page-wrapper{
+  width: 960px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
+  border-radius: 12px 12px 0px 0px;
+}
+
 #box-h{
 background-color: #000000;
 border: 3px soild red;
@@ -10,6 +17,7 @@ height: 50px;
 #header1{
   color: yellow;
   text-align: center;
-  margin-top: 10;
-  margin-bottom: 10;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
